--- a/index.html
+++ b/index.html
@@ -12,7 +12,16 @@
             <h1>Password Generator(Simple)</h1>
         </div>
         <div class="container">
-            <input type="text" id="text-output" />
+            <input type="text" id="text-output" placeholder="**********" />
+            <input
+                id="number-range"
+                type="range"
+                value="8"
+                min="8"
+                max="24"
+                step="1"
+            />
+            <label id="show-number-range" for="number-range">8</label>
             <button id="generatebtn">GENERATE</button>
             <button id="copybtn">COPY</button>
             <script src="./password-gen.js"></script>
